cabal-version: 2.2
-- cabal 2.2 for common stanzas

name: adventofcode2019
version: 1.0
build-type: Simple

common flags
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -- in GHC 9.0.1, enabling -Wmissing-exported-signatures disabled stricter -Wmissing-signatures
    -- this was fixed in GHC 9.2.1, so it's safe to keep this now.
    -- (Not mentioned in release notes, but git tag --contains e1f133bf5ee30f25a94b4f3bf4d26d1a9381f0d9)
    ---Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-kind-signatures
    -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-monomorphism-restriction
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common bin
  hs-source-dirs: bin

library
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  build-depends:   base

library aocintcode
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Intcode
  -- !? added in array 0.5.6.0
  build-depends:   base, array >= 0.5.6.0, containers

library aocsearch
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Search
  build-depends:   base, containers

library aocsplit
  import: flags
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  build-depends:   base

test-suite test-intcode
  import: flags
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        intcode.hs
  -- without -dynamic:
  -- Could not find module ‘Test.HUnit’
  -- There are files missing in the ‘HUnit-1.6.0.0’ package,
  ghc-options:    -dynamic
  build-depends:  base, aocintcode, HUnit

executable 01_rocket_equation
  import: bin, flags
  build-depends: base, adventofcode2019
  main-is:       01_rocket_equation.hs

executable 02_intcode
  import: bin, flags
  build-depends: base, aocintcode
  main-is:       02_intcode.hs

executable 03_crossed_wires
  import: bin, flags
  build-depends: base, adventofcode2019, aocsplit
  main-is:       03_crossed_wires.hs

executable 04_password
  import: bin, flags
  build-depends: base, aocsplit, filepath
  main-is:       04_password.hs

executable 05_intcode_ii
  import: bin, flags
  build-depends: base, aocintcode
  main-is:       05_intcode_ii.hs

executable 06_universal_orbit_map
  import: bin, flags
  build-depends: base, adventofcode2019, aocsearch, aocsplit, containers
  main-is:       06_universal_orbit_map.hs

executable 07_amplification_circuit
  import: bin, flags
  build-depends: base, aocintcode
  main-is:       07_amplification_circuit.hs

executable 08_space_image_format
  import: bin, flags
  build-depends: base, adventofcode2019
  main-is:       08_space_image_format.hs

executable 09_intcode_relative
  import: bin, flags
  build-depends: base, aocintcode
  main-is:       09_intcode_relative.hs

executable 10_monitoring_station
  import: bin, flags
  build-depends: base, adventofcode2019, containers
  main-is:       10_monitoring_station.hs

executable 11_intcode_langtons_ant
  import: bin, flags
  build-depends: base, aocintcode, containers
  main-is:       11_intcode_langtons_ant.hs

executable 12_n_body_problem
  import: bin, flags
  build-depends: base, adventofcode2019, aocsplit
  main-is:       12_n_body_problem.hs

executable 13_breakout
  import: bin, flags
  build-depends: base, aocintcode, containers
  main-is:       13_breakout.hs

executable 14_space_stoichiometry
  import: bin, flags
  build-depends: base, adventofcode2019, aocsplit, containers
  main-is:       14_space_stoichiometry.hs

executable 15_intcode_search
  import: bin, flags
  build-depends: base, aocintcode
  main-is:       15_intcode_search.hs

executable 16_flawed_frequency_transmission
  import: bin, flags
  -- modifyArray added in array 0.5.6.0
  build-depends: base, adventofcode2019, array >= 0.5.6.0
  main-is:       16_flawed_frequency_transmission.hs

executable 17_set_and_forget
  import: bin, flags
  build-depends: base, aocintcode, aocsplit, containers
  main-is:       17_set_and_forget.hs

executable 18_many_worlds_interpretation
  import: bin, flags
  build-depends: base, adventofcode2019, aocsearch, array, containers
  main-is:       18_many_worlds_interpretation.hs

executable 19_intcode_tractor_beam
  import: bin, flags
  build-depends: base, aocintcode
  main-is:       19_intcode_tractor_beam.hs

executable 20_donut_maze
  import: bin, flags
  build-depends: base, adventofcode2019, aocsearch, array, containers
  main-is:       20_donut_maze.hs

executable 21_springdroid_adventure
  import: bin, flags
  build-depends: base, aocintcode
  main-is:       21_springdroid_adventure.hs
