name: adventofcode2019
version: 1.0
build-type: Simple

-- cabal: The field 'build-depends: adventofcode' refers to a library which is
-- defined within the same package. To use this feature the package must specify
-- at least 'cabal-version: >= 1.8'.
cabal-version: >= 1.8

library
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode
  ghc-options:     -Wall
  build-depends:   base

library aocintcode
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Intcode
  ghc-options:     -Wall
  build-depends:   base, array, containers

library aocsearch
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Search
  ghc-options:     -Wall
  build-depends:   base, containers

library aocsplit
  hs-source-dirs:  lib
  exposed-modules: AdventOfCode.Split
  ghc-options:     -Wall
  build-depends:   base

test-suite test-intcode
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        intcode.hs
  -- without -dynamic:
  -- Could not find module ‘Test.HUnit’
  -- There are files missing in the ‘HUnit-1.6.0.0’ package,
  ghc-options:    -Wall -dynamic
  build-depends:  base, aocintcode, containers, HUnit

executable 01_rocket_equation
  build-depends:  base, adventofcode2019
  hs-source-dirs: bin
  main-is:        01_rocket_equation.hs
  ghc-options:    -Wall

executable 02_intcode
  build-depends:  base, aocintcode, containers
  hs-source-dirs: bin
  main-is:        02_intcode.hs
  ghc-options:    -Wall

executable 03_crossed_wires
  build-depends:  base, adventofcode2019, aocsplit, containers
  hs-source-dirs: bin
  main-is:        03_crossed_wires.hs
  ghc-options:    -Wall

executable 04_password
  build-depends:  base, aocsplit, filepath
  hs-source-dirs: bin
  main-is:        04_password.hs
  ghc-options:    -Wall

executable 05_intcode_ii
  build-depends:  base, aocintcode, containers
  hs-source-dirs: bin
  main-is:        05_intcode_ii.hs
  ghc-options:    -Wall

executable 06_universal_orbit_map
  build-depends:  base, adventofcode2019, aocsearch, aocsplit, containers
  hs-source-dirs: bin
  main-is:        06_universal_orbit_map.hs
  ghc-options:    -Wall

executable 07_amplification_circuit
  build-depends:  base, aocintcode, containers
  hs-source-dirs: bin
  main-is:        07_amplification_circuit.hs
  ghc-options:    -Wall

executable 08_space_image_format
  build-depends:  base, adventofcode2019
  hs-source-dirs: bin
  main-is:        08_space_image_format.hs
  ghc-options:    -Wall

executable 09_intcode_relative
  build-depends:  base, aocintcode, containers
  hs-source-dirs: bin
  main-is:        09_intcode_relative.hs
  ghc-options:    -Wall

executable 10_monitoring_station
  build-depends:  base, adventofcode2019, containers
  hs-source-dirs: bin
  main-is:        10_monitoring_station.hs
  ghc-options:    -Wall

executable 11_intcode_langtons_ant
  build-depends:  base, aocintcode, containers
  hs-source-dirs: bin
  main-is:        11_intcode_langtons_ant.hs
  ghc-options:    -Wall

executable 12_n_body_problem
  build-depends:  base, adventofcode2019, aocsplit, containers
  hs-source-dirs: bin
  main-is:        12_n_body_problem.hs
  ghc-options:    -Wall

executable 13_breakout
  build-depends:  base, aocintcode, containers
  hs-source-dirs: bin
  main-is:        13_breakout.hs
  ghc-options:    -Wall

executable 14_space_stoichiometry
  build-depends:  base, adventofcode2019, aocsplit, containers
  hs-source-dirs: bin
  main-is:        14_space_stoichiometry.hs
  ghc-options:    -Wall

executable 15_intcode_search
  build-depends:  base, aocintcode, containers
  hs-source-dirs: bin
  main-is:        15_intcode_search.hs
  ghc-options:    -Wall

executable 16_flawed_frequency_transmission
  build-depends:  base, adventofcode2019, array
  hs-source-dirs: bin
  main-is:        16_flawed_frequency_transmission.hs
  ghc-options:    -Wall

executable 17_set_and_forget
  build-depends:  base, aocintcode, aocsplit, containers
  hs-source-dirs: bin
  main-is:        17_set_and_forget.hs
  ghc-options:    -Wall

executable 18_many_worlds_interpretation
  build-depends:  base, adventofcode2019, aocsearch, array, containers
  hs-source-dirs: bin
  main-is:        18_many_worlds_interpretation.hs
  ghc-options:    -Wall

executable 19_intcode_tractor_beam
  build-depends:  base, aocintcode
  hs-source-dirs: bin
  main-is:        19_intcode_tractor_beam.hs
  ghc-options:    -Wall

executable 20_donut_maze
  build-depends:  base, adventofcode2019, aocsearch, array, containers
  hs-source-dirs: bin
  main-is:        20_donut_maze.hs
  ghc-options:    -Wall

executable 21_springdroid_adventure
  build-depends:  base, aocintcode
  hs-source-dirs: bin
  main-is:        21_springdroid_adventure.hs
  ghc-options:    -Wall

executable 22_slam_shuffle
  build-depends:  base, adventofcode2019
  hs-source-dirs: bin
  main-is:        22_slam_shuffle.hs
  ghc-options:    -Wall

executable 23_intcode_category_six
  build-depends:  base, aocintcode, containers
  hs-source-dirs: bin
  main-is:        23_intcode_category_six.hs
  ghc-options:    -Wall

executable 24_planet_of_discord
  build-depends:  base, adventofcode2019, containers
  hs-source-dirs: bin
  main-is:        24_planet_of_discord.hs
  ghc-options:    -Wall
